--- a/Romanian/main/Contacts.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Contacts.apk/res/values-ro/strings.xml
@@ -1140,7 +1140,7 @@ Apăsaţi pictograma Îmbinare de mai jos pentru a începe.</string>
     <string name="sim_export_loading">Citirea cartelei SIM…</string>
     <string name="sim_indexed_contact_not_exist">Poziţia %1$d pe cartela SIM nu este valabilă, trebuie să fie cuprinsă între %2$d şi %3$d</string>
     <string name="sim_no_contact">Nu există contacte pe cartela SIM</string>
-  <string name="sim_unloaded">Nu s-a încărcat cartela SIM</string>
+  <string name="sim_unloaded">"Cartela SIM nu este instalată"</string>
     <string name="sina_weibo">Sina Weibo</string>
     <string name="single_group_list_empty">Niciun membru în grup</string>
     <string name="smart_group_action_bar_title">%1$s: %2$s (%3$s)</string>
