--- a/Romanian/main/Mipub.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Mipub.apk/res/values-ro/strings.xml
@@ -42,7 +42,7 @@
     <string name="context_menu_new_contact">Creați un contact nou în agendă</string>
     <string name="context_menu_send_mail">Trimite e-mail</string>
     <string name="context_menu_send_sms">Trimite mesaj</string>
-    <string name="conversation_list_title">Mesaje Mi</string>
+    <string name="conversation_list_title">Mesagerie Mi</string>
     <string name="converting_to_picture_message">Convertire în mesaj multimedia…</string>
     <string name="converting_to_text_message">Convertire în mesaj text…</string>
     <string name="copy_message_text">Copie textul</string>
