--- a/Romanian/main/MiuiScanner.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiScanner.apk/res/values-ro/strings.xml
@@ -280,7 +280,7 @@
     <string name="language_entry_russian">Rusă</string>
     <string name="language_entry_spanish">Spaniolă</string>
     <string name="language_entry_swedish">Suedeză</string>
-    <string name="low_version_tip">Aplicația Scaner nu poate rula pe acest sistem; actualizați versiunea MIUI</string>
+    <string name="low_version_tip">Versiunea MIUI este prea veche. Actualizați MIUI pentru a utiliza aplicația Scaner.</string>
     <string name="module_title_code">Cod QR</string>
     <string name="module_title_document">Document</string>
     <string name="module_title_namecard">Carte de vizită</string>
@@ -305,6 +305,7 @@
     <string name="phone">Telefon:</string>
     <string name="picker_lable">Fotografie</string>
     <string name="place_barcode_into_rectangle">Plasați codul în interiorul cadrului</string>
+  <string name="pref_camera_focusmode_default">continuous-picture</string>
   <string name="pref_camera_jpeg_quality_fine">fine</string>
   <string name="pref_camera_jpeg_quality_normal">normal</string>
   <string name="pref_camera_jpeg_quality_superfine">superfine</string>
