--- a/Romanian/main/MiuiScreenRecorder.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiScreenRecorder.apk/res/values-ro/strings.xml
@@ -22,7 +22,7 @@
     <string name="error_open_file_failed_no_app_found">"Nu s-a găsit nicio aplicație pentru a deschide acest fișier"</string>
     <string name="frames">Frecvență cadre</string>
     <string name="frames_summary">O frecvență mai mare de afișare a cadrelor reduce blur-ul datorat mișcării</string>
-    <string name="gleam_led_while_recording">LED pornit în timpul înregistrării</string>
+    <string name="gleam_led_while_recording">LED activ în timpul înregistrării</string>
     <string name="hint_back">Înapoi</string>
     <string name="hint_home">Acasă</string>
     <string name="hint_menu">Meniu</string>
