--- a/Romanian/main/SecurityAdd.apk/res/values-ro/strings.xml
+++ b/Romanian/main/SecurityAdd.apk/res/values-ro/strings.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-    <string name="add_done">Adăugare finalizată</string>
+    <string name="add_done">Adăugată cu succes</string>
     <string name="add_game">Adăugați un joc</string>
     <string name="add_whitelist">Adăugați în lista excepțiilor</string>
     <string name="anim_gamebooster_text">Doar o secundă…</string>
@@ -17,24 +17,24 @@
     <string name="boosting">Se crește viteza…</string>
     <string name="cancel_button">Renunță</string>
     <string name="close">Închideți</string>
-    <string name="create_shortcut">va crea o comandă rapidă pe Ecranul principal pentru pornire rapidă</string>
-    <string name="dialog_text">va crea o comandă rapidă pe Ecranul principal pentru pornire rapidă</string>
+    <string name="create_shortcut">Creați o comandă rapidă pe Ecranul principal pentru Creșterea vitezei în jocuri</string>
+    <string name="dialog_text">Creați o comandă rapidă pe Ecranul principal pentru Creșterea vitezei în jocuri</string>
     <string name="dont_bore">"Evitați ca butoanele și notificările să vă distragă atenția"</string>
-    <string name="dont_bore_text">Eliminare mesaje și butoane pentru a nu distrage atenția de la joc</string>
-    <string name="dont_bore_title">Eliminare zgomot de fond</string>
+    <string name="dont_bore_text">Reduceți la tăcere notificările și dezactivați butoanele pentru a nu distrage atenția de la joc</string>
+    <string name="dont_bore_title">Mod Nu deranjați</string>
     <string name="empty">" "</string>
     <string name="function_close">Opriți</string>
     <string name="game_booster">Creștere viteză în jocuri</string>
     <string name="game_booster_intro">Despre creșterea vitezei în jocuri</string>
   <string name="game_booster_title">Boost</string>
     <string name="game_booster_total">Viteza a crescut de %1$s ori, s-a prelungit durata de joc cu %2$s</string>
-    <string name="game_improve_text1">Curățare automată a proceselor din fundal, creștere a memoriei pentru jocuri</string>
-    <string name="game_improve_text2">Curățare automată a proceselor din fundal, creștere a memoriei pentru jocuri； Îmbunătățirea performanței procesorului, creșterea fluenței jocurilor</string>
-    <string name="game_improve_title">Optimizarea performanței</string>
+    <string name="game_improve_text1">Curățați cache-ul din fundal pentru a crește memoria alocată pentru jocuri</string>
+    <string name="game_improve_text2">Curățați cache-ul din fundal pentru a crește memoria alocată pentru jocuri și pentru a îmbunătăți performanța procesorului</string>
+    <string name="game_improve_title">Optimizați performanța sistemului</string>
     <string name="game_more_improve">Restricționați activitățile din fundal și viteza de descărcare pentru a economisi acumulatorul și lățimea de bandă pentru jocuri</string>
-    <string name="game_net_text1">Limitarea vitezei de descărcare în fundal, reducerea lagului datorat rețelei</string>
-    <string name="game_net_text2">Creșterea vitezei rețelei și limitarea vitezei de descărcare în fundal, reducerea lagului datorat vitezei rețelei</string>
-    <string name="game_net_title">Protecție rețea</string>
+    <string name="game_net_text1">Limitați viteza de descărcare în fundal pentru a reduce lagul datorat rețelei</string>
+    <string name="game_net_text2">"Creșteți viteza de conectare a jocului și limitați viteza de descărcare în fundal pentru a reduce lagul datorat vitezei rețelei</string>
+    <string name="game_net_title">Optimizați viteza de conectare</string>
     <string name="game_setting">Setări jocuri</string>
     <string name="gamebooster_network_dialog_message">Permiteți aplicației de Securitate să se conecteze la rețea pentru a utiliza toate caracteristicile de Creștere a vitezei în jocuri?</string>
     <string name="gamebooster_network_dialog_title">"Unele caracteristici nu sunt disponibile"</string>
@@ -55,9 +55,9 @@
     <string name="gs_open_game_booster">Creștere viteză</string>
     <string name="gs_performance_mode">Mod Performanță</string>
     <string name="gs_performance_mode_detail">Creșteți utilizarea procesorului pentru a asigura o performanță crescută</string>
-    <string name="i_know">Știu</string>
+    <string name="i_know">Am înțeles</string>
     <string name="install_game_count">Au fost adăugate %d jocuri</string>
-    <string name="intro_improve">Bazată pe nivelul sistemului pentru a vă oferi o experiență fulminantă în jocuri</string>
+    <string name="intro_improve">Creșteți experiența de joc la nivel de sistem</string>
     <string name="loading">Doar o secundă…</string>
   <string name="lucky_result_title">Plicuri roșii</string>
     <string name="main_toolbar_purchase">Adăugați</string>
@@ -85,7 +85,7 @@
     <string name="month_report_warning_dialog_title">Raport lunar de securitate</string>
     <string name="net_delay_title">Întârziere</string>
     <string name="network_not_available">"Nu se poate conecta la rețea"</string>
-    <string name="no_game">Niciun joc găsit</string>
+    <string name="no_game">"Niciun joc găsit"</string>
     <string name="no_network_btn">Încercați din nou</string>
     <string name="ok_button">OK</string>
     <string name="open_browser">Deschideți în browser</string>
@@ -96,7 +96,7 @@
     <string name="privacy_declare_dialog_title">Termenii serviciului</string>
     <string name="privacy_prompt_traffic_purchase_message">"Numărul dumneavoastră de telefon și detaliile despre operator vor fi criptate și trimise la serverele Mi pentru a obține mai multe informații despre opțiunile de achiții de date."</string>
     <string name="release_memory">Goliți memoria cache</string>
-    <string name="save_energy_text">Se împiedică pornirea automată și sincronizarea datelor aplicațiilor în fundal, se controlează memoria de operare și se reduce utilizarea acumulatorului pentru celelalte aplicații</string>
+    <string name="save_energy_text">"Restricționați pornirea automată și sincronizarea datelor aplicațiilor în fundal pentru a obține durata maximă de utilizare a acumulatorului telefonului"</string>
     <string name="save_energy_title">Optimizare consum de energie</string>
     <string name="scan_installed_games">Se verifică jocurile instalate…</string>
     <string name="setting">Setări</string>
